--- a/style.css
+++ b/style.css
@@ -1,5 +1,191 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-h2 {
-    font-family: "Roboto", sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
+
+:root {
+  --background: #371e30;
+
+  --mauvelous: #f59ca9;
+  --light_coral: #f6828c;
+  --razzle_dazzle_rose: #df57bd;
+  --plum: #a03e99;
+
+  --middle_blue_green: #9dd9d2;
+  --green_shen: #79bcb8;
+  --verdigris: #5ec2b7;
+  --dark_verdigris: #2ca6a4;
+
+  --laser-Lemon: #faff70;
+  --orange-yellow-crayola: #e3c16f;
+  --misty_most: #baab68;
+  --liver_chestnut: #946846;
+}
+
+body {
+  background: var(--background);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 40px 0;
+}
+
+.container .box {
+  position: relative;
+  width: 320x;
+  height: 400px;
+  color: white;
+  background-color: black;
+  margin: 20px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+}
+
+.container .box:hover {
+  transform: translateY(-20px);
+}
+
+.container .box:nth-child(1)::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(
+    45deg,
+    var(--mauvelous),
+    var(--light_coral)
+  );
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.container .box:nth-child(1)::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(45deg, var(--mauvelous), var(--plum));
+  filter: blur(30px);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.container .box:nth-child(2)::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(
+    45deg,
+    var(--middle_blue_green),
+    var(--dark_verdigris)
+  );
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.container .box:nth-child(2)::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(
+    45deg,
+    var(--middle_blue_green),
+    var(--dark_verdigris)
+  );
+  filter: blur(30px);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.container .box:nth-child(3)::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(
+    45deg,
+    var(--laser-Lemon),
+    var(--liver_chestnut)
+  );
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.container .box:nth-child(3)::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(
+    45deg,
+    var(--laser-Lemon),
+    var(--liver_chestnut)
+  );
+  filter: blur(30px);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.container .box span {
+    inset: 10px;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
+.container .box span::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.07);
+}
+
+
+.container .box .content {
+    position: relative;  
+    z-index: 20; 
+    width: 30vh;
+    padding: 40px;
+    text-align: justify;
+}
+
+
+.container .box .content h2 {
+    font-size: 2rem;
+    margin-bottom: 15px;
+}
+
+.container .box .content p {
+    font-size: 1rem;
+    margin-bottom: 15px;
+}
+
+.container .box .content a {
+    display: inline-block;
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    padding: 5px 10px;
+    box-shadow: 1px 1px 2px black;
+}
+
